added tests to testmain.py. changes to the makefile for zips.

--- a/Labs/HW2/Makefile
+++ b/Labs/HW2/Makefile
@@ -1,6 +1,6 @@
 CURRENT_DATE=$(shell date +%Y-%m-%d-%H-%M)
-FILE_SUFFIX=John-Maksuta-CS320-801-HW2-2
-TARGET_DIR=HW2
+FILE_SUFFIX=John-Maksuta-CS320-801-HW2-7
+TARGET_DIR=./
 zip:
 	zip -r "$(CURRENT_DATE)-$(FILE_SUFFIX).zip" $(TARGET_DIR)
 
