--- a/Labs/HW3/Makefile
+++ b/Labs/HW3/Makefile
@@ -1,6 +1,6 @@
 CURRENT_DATE=$(shell date +%Y-%m-%d-%H-%M)
 FILE_SUFFIX=John-Maksuta-CS320-801-HW3-1
-TARGET_DIR=HW3
+TARGET_DIR=./
 zip:
 	zip -r "$(CURRENT_DATE)-$(FILE_SUFFIX).zip" $(TARGET_DIR)
 
