--- a/Labs/HW3/.vscode/launch.json
+++ b/Labs/HW3/.vscode/launch.json
@@ -10,7 +10,8 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "args": ["1"]
         },
         {
             "name": "Debug TestMain",
