I submitted version 1. it got 36/45, with a failed argument test. I made that change and am going to resubmit.

--- a/Labs/HW8/.vscode/launch.json
+++ b/Labs/HW8/.vscode/launch.json
@@ -8,9 +8,11 @@
             "name": "Test Main",
             "type": "debugpy",
             "request": "launch",
-            "program": "${cwd}/testmain.py",
+            "program": "${cwd}/tsp.py",
             "console": "integratedTerminal",
-            "args": []
+            "args": [
+                "DIST6-simple"
+            ]
         }
     ]
 }
