Added unit tests.

--- a/Labs/HW9/.vscode/launch.json
+++ b/Labs/HW9/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "Test Main",
             "type": "debugpy",
             "request": "launch",
-            "program": "${cwd}/tsp.py",
+            "program": "${cwd}/testmain.py",
             "console": "integratedTerminal",
             "args": [
-                "DIST6-simple"
+                ""
             ]
         }
     ]
